--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
-  color: #ffffff;
+  color: #000000;
   background-color: #808080;
 }
 
