--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  color: #fff;
+  color: #000000;
 }
 
 /* If you're embedding your SVG inline, you might add: */
