--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
 /* About Section */
 .about {
   padding: 4rem 2rem;
-  background: #808080;
+  background: #4d4d4d;
   text-align: center;
 }
 .about .container {
