--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,10 @@ body {
   line-height: 1.6;
   color: #000000;
   background-color: #808080;
+  background-image: url('\images\logo.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 }
 
 /* Hero Section */
