--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,11 @@ body {
   color: #000000;
 }
 .hero-content h1 {
+  z-index: 4;
   font-size: 3rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 5rem;
+   margin-top: -5%;
+  color: #b3adad;
 }
 .hero-content p {
   font-size: 1.25rem;
