--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ body {
   padding: 4rem 2rem;
   background: #4d4d4d;
   text-align: center;
+  margin-top: -200px; 
 }
 .about .container {
   max-width: 800px;
