--- a/styles.css
+++ b/styles.css
@@ -22,11 +22,15 @@ body {
   justify-content: center;
   text-align: center;
   color: #000;
+  width: 100%;
+  height: 100%;
 }
 
 .hero-content {
   position: relative;
   z-index: 2;
+  width: 100%;
+  height: 100%;
 }
 
 .logo-banner {
