--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,13 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   color: #fff;
+  background-image: url('/images/logo.jpg');
+  justify-content: flex-start; /* Aligns children to the top */
+  padding-top: 20px;  /* Moves text down without shifting the background */
+  color: #fff;
+
+  
 }
 
 /* About Section */
