--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,14 @@ body {
 
   
 }
+.logo-text {
+  position: absolute;
+  top: 30px; /* Adjust this value to move text down */
+  left: 0;
+  right: 0;
+  text-align: center;
+  color: #fff;
+}
 
 /* About Section */
 .about {
