--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
   flex-direction: column;
   align-items: center;
   color: #fff;
-  background-image: url('/images/logo.jpg');
+  background-image: url('/images/3logo.jpg');
   justify-content: flex-start; /* Aligns children to the top */
   padding-top: 15%;  /* Moves text down without shifting the background */
   color: #fff;
