--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
   position: relative;
   z-index: 2;
   width: 100%;
+   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
   height: 100%;
 }
 
