--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+@keyframes zoomIn {
+  from {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 @keyframes fadeInUp {
   from {
     opacity: 0;
@@ -45,8 +55,10 @@ body {
   width: 100%;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
   height: 100%;
+  /*zoom*/
+  animation: zoomIn 1s ease-out forwards;
   /* Fade in animation */
-  animation: fadeInUp 1s ease-out forwards;
+  /*animation: fadeInUp 1s ease-out forwards; */
 }
 
 .logo-banner {
