--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
 @keyframes zoomIn {
   from {
     transform: scale(0.8);
@@ -33,7 +44,8 @@ body {
   background-color: #808080;
   width: 100%;
   height: 100%;
-  animation: zoomIn 1s ease-out forwards;
+/*  animation: zoomIn 1s ease-out forwards;*/
+    animation: bounce 2s infinite;
 }
 
 /* Hero Section */
