--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
   width: 100%;
   height: 100%;
 /*  animation: zoomIn 1s ease-out forwards;*/
-    animation: bounce 2s infinite;
+    animation: bounce 2s;
 }
 
 /* Hero Section */
