--- a/styles.css
+++ b/styles.css
@@ -44,8 +44,8 @@ body {
   background-color: #808080;
   width: 100%;
   height: 100%;
-/*  animation: zoomIn 1s ease-out forwards;*/
-    animation: bounce 2s;
+  animation: zoomIn 1s ease-out forwards;
+ /*   animation: bounce 2s;*/
 }
 
 /* Hero Section */
