--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+@keyframes moveSine {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 2000px 0; /* Adjust value based on your image width */
+  }
+}
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     transform: translateY(0);
