--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ body {
   background: #4d4d4d;
   text-align: center;
   /* Use a repeating sine wave image that tiles horizontally */
-  background: url('/images/1.jpg') repeat-x;
+  background: url('/images/e.jpg') repeat-x;
   background-size: 100% 100%; /* Adjust if necessary */
   animation: moveSine 60s linear infinite;
 }
