--- a/styles.css
+++ b/styles.css
@@ -246,6 +246,8 @@ body {
   font-size: 28px;
   font-weight: bold;
   cursor: pointer;
+
+  animation: zoomIn 1s ease-out forwards
 }
 
 /* Optional: Make modal image responsive */
